single podcast episode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -934,9 +934,11 @@ i{
     object-fit: cover;
     background-position: center ;
 }
+
 .mySwiper{
     padding:0 40px;
 }
+
 .mySwiper .swiper-horizontal>.swiper-pagination-progressbar.swiper-pagination-progressbar-opposite, .swiper-pagination-progressbar.swiper-pagination-horizontal.swiper-pagination-progressbar-opposite, .swiper-pagination-progressbar.swiper-pagination-vertical, .swiper-vertical>.swiper-pagination-progressbar {
     width: 2px;
     height: 100%;
@@ -950,13 +952,16 @@ i{
     margin-top: 80px;
     overflow: hidden;
 }
+
 .post_texts blockquote{
     margin: 40px 260px;
 }
+
 .post_texts blockquote p{
     margin:30px 0;
     color:var(--clr-80);
 }
+
 .post_texts h2{
     margin: 0 210px;
     font-size:var(--text-36);
@@ -964,22 +969,26 @@ i{
     line-height: 135%;
     font-family: var(--Merriweather);
 }
+
 .post_texts blockquote p,
 .post_texts h4{
     font-size: var(--text-18);
     line-height: 175%;
     font-family: var(--Jakarta);
 }
+
 .divider .dr{
     width:70%;
     height: 1px;
     background-color:var(--clr-73);
 }
+
 .divider a{
     color:var(--clr-73);
     line-height: 136%;
     font-size:var(--text-16);
 }
+
 .post_time{
     margin-top: 10px;
 }
@@ -987,10 +996,13 @@ i{
     color:  var(--clr-40);
     font-size: var(--text-14);
 }
+
 .post_content a:hover{
     color:var(--clr-4D);
 }
+
 /*============================ PODCASTS SECTION LAYOUT DESIGN ==========================*/
+
 .podcast_av{
     padding:40px 0;
 }
@@ -1006,6 +1018,13 @@ i{
 .av_servers ul li{
     display: inline-block;
     margin-left:40px;
+    padding: 10px;
+    transition: .3s;
+    border-radius: 5px;
+}
+
+.av_servers ul li:hover{
+    box-shadow: 0 0 15px rgba(0,0,0,0.1);
 }
 
 .av_servers ul li:first-child{
@@ -1040,16 +1059,16 @@ i{
 }
 
 .single_graph.blue{
-    background-color:#0066D9;
+    background-color: #4617AB;
 }
 .single_graph.green{
-    background-color:#36BA54;
+    background-color:#8000ff;
 }
 .single_graph.yellow{
-    background-color:#FACC15;
+    background-color:#1A04D3;
 }
 .single_graph.red{
-    background-color:#DB3236;
+    background-color:#AC1B75;
 }
 
 
@@ -1085,7 +1104,9 @@ i{
 .graph_text h3{
     font-size: var(--text-28);
 }
+
 /*--==================================== PODCASTS EPISODE SECTION LAYOUT DESIGN ================================= */
+
 .episodes{
     font-family: var(--Inter);
     color: #14142B;
@@ -1134,10 +1155,10 @@ i{
     top:20px;
     right:20px;
 }
-.ep_details{
-    padding:20px;
-}
 
+.ep_details{
+    padding:20px ;
+}
 
 .ep_details h3 a{
     font-size: var(--text-24);
@@ -1145,13 +1166,86 @@ i{
     line-height: 30px;
     color: #14142B;
 }
+
 .ep_details p{
     margin:15px 0;
 }
+
 .ep_details .flex{
     display: inline-flex;
     column-gap: 8px;
+    color: #14142B;
 }
+
+.ep_details a{
+    transition: .3s;
+}
+
+.ep_details a:hover{
+    color:var(--clr-64);
+}
+
+/*============================ SINGLE PODCAST HERO SECTION LAYOUT DESIGN ==========================*/
+
+.signle_podcast-hero{
+    padding: 40px 0;
+    font-family: var(--Inter);
+}
+
+.single_hero-content{
+    grid-template-columns: repeat(2,1fr);
+    gap:16px;
+    align-items: center;
+}
+
+.podcast_hero-img{
+    position: relative;
+}
+
+.podcast_hero-img a{
+    position: absolute;
+    top:20px;
+    right:20px;
+}
+
+.podcast_hero-text a{
+    text-transform: uppercase;
+    color:#503AE7;
+    font-weight: 600;
+}
+
+.podcast_hero-text h2{
+    font-size: var(--text-32);
+    line-height: 120%;
+    font-weight: 700;
+    color:var(--clr-11);
+    margin:16px 0 28px;
+}
+
+.podcast_hero-text p{
+    color:var(--clr-11);
+}
+
+.podecast_ep-btn{
+    font-family: var(--Inter);
+    padding: 14px 32px;
+    margin-top: 30px;
+    font-weight: 600;
+}
+
+.podecast_ep-btn span{
+    margin-left: 10px;
+}
+
+.episode_details{
+    margin:30px 0;
+}
+
+.episode_grid{
+    grid-template-columns: repeat(3,1fr);
+}
+
+
 /*============================ FOOTER SECTION LAYOUT DESIGN ==========================*/
 
 .footer{
@@ -1414,6 +1508,20 @@ i{
         width:90px;
         height: 90px;
     }
+
+    .podcast_hero-text h2{
+        font-size: var(--text-28);
+    }
+    
+    .podcast_hero-text p{
+        color:var(--clr-11);
+    }
+    
+    .podecast_ep-btn{
+        margin-top: 20px;
+    }
+    
+
 }
 
 @media screen and (max-width: 992px) {
@@ -1693,11 +1801,40 @@ i{
 
     
     /*============================ RESPONSIVE PODCAST GRAPH SECTION DESIGN ==========================*/
+    .episode_description{
+        grid-template-columns: repeat(2,1fr);
+    }
+    
+    .episode_description .span-2{
+        grid-column: span 1;
+    }
 
+    .ep_details h3 a{
+        font-size: var(--text-18);
+        line-height: 24px;
+    }
+
+    .ep_details{
+        padding: 20px 10px;
+    }
     /* .graph_content{
         grid-template-columns: repeat(2,1fr);
        
     } */
+
+    .podcast_hero-text h2{
+        font-size: var(--text-24);
+        margin:10px 0;
+    }
+    
+    .podcast_hero-text p{
+        font-size: var(--text-14);
+        line-height: 18px;
+    }
+    
+    .podecast_ep-btn{
+        margin-top: 14px;
+    }
 
 }
 
@@ -1972,8 +2109,24 @@ i{
 
     .graph_content{
         grid-template-columns: repeat(2,1fr);
-    }  
+    } 
 
+    .episode_description{
+        grid-template-columns: repeat(1,1fr);
+    }
+    
+    .episode_content{
+        grid-template-columns: repeat(2,1fr);
+    }
+
+    .single_hero-content{
+        grid-template-columns: repeat(1,1fr);
+    }
+    
+    .podcast_hero-text{
+        padding-right: 80px;
+    }
+    
 
 }
 
@@ -2166,6 +2319,30 @@ i{
         line-height:var(--text-24);
     }
    
+    .episode_content{
+        grid-template-columns: repeat(1,1fr);
+    } 
+
+    .ep_details{
+        padding:20px;
+    }
+
+    .ep_details h3 a{
+        font-size: var(--text-16);
+    }
+
+    .ep_details p{
+        font-size: var(--text-14);
+        margin:10px 0;
+    }
+
+    .podcast_hero-text h2{
+        font-size: var(--text-20);
+    }
+
+    .podcast_hero-text{
+        padding-right: 0;
+    }
 }
 
 @media screen and (max-width: 480px){
